src/test/ui/parser/suggest-semi-in-array.rs
fn main() {
    let v = [1
    2];
    //~^ ERROR expected one of `,`, `.`, `;`, `?`, `]`, or an operator, found `2`
}
